# actix-web-boilerplate

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml
.github/workflows/: lint.yml
migrations/2018-08-12-115810_create_users_table/: up.sql
src/: main.rs  schema.rs
src/app/: config.rs  db.rs  error.rs  init.rs  mod.rs  route.rs  state.rs
src/app/api/: mod.rs  users.rs
src/app/api/users/: list.rs
src/app/db/: executor.rs  mod.rs  query_execute.rs  query_load.rs
src/app/lib/: error_handler.rs  helpers.rs  mod.rs  validators.rs
src/app/models/: user.rs
