[package]
authors = ["Jan Keith Darunday <jkcdarunday@gmail.com>"]
name = "actix-web-boilerplate"
version = "0.1.0"
edition = "2018"

[dependencies]
actix = "0.13"
actix-web = "4.3"
r2d2 = "0.8.10"
serde = "1.0.180"
serde_derive = "1.0.180"
serde_json = "1.0.104"
actix-rt = "2.8.0"
config = "0.13.3"
lazy_static = "1.4.0"

[dependencies.diesel]
features = ["postgres", "r2d2"]
version = "2.1.0"
