[package]
authors = ["Jan Keith Darunday <github@jkcdarunday.mozmail.com>"]
name = "actix-web-boilerplate"
version = "0.1.0"
edition = "2018"
license= "MIT"

[dependencies]
actix = "0.13"
actix-web = "4.4"
r2d2 = "0.8.10"
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.105"
actix-rt = "2.9.0"
config = "0.13.3"
dotenv = "0.15.0"
once_cell = "1.18.0"
actix-web-validator = "5.0.1"
validator = { version = "0.16.1", features = ["derive"] }

[dependencies.diesel]
features = ["postgres", "r2d2"]
version = "2.1.1"
